--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="./public/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./styles.css" />
     <title>Frontend Mentor | Bento grid</title>
@@ -27,19 +27,24 @@
   </head>
   <body>
     <div class="container">
-      <div class="item">
-        Social Media 10x Faster with AI Over 4,000 5-star reviews
+      <div class="card-1">
+        <h3>
+          Social Media <span class="space-ajust">1</span><span>0x </span
+          ><i>Faster </i> with AI
+        </h3>
+        <img src="./public/images/illustration-five-stars.webp" alt="" />
+        <p>Over 4,000 5-star reviews</p>
       </div>
-      <div class="item">Manage multiple accounts and platforms.</div>
-      <div class="item">Maintain a consistent posting schedule.</div>
-      <div class="item">
+      <div class="card-2">Manage multiple accounts and platforms.</div>
+      <div class="card-3">Maintain a consistent posting schedule.</div>
+      <div class="card-4">
         Schedule to social media. Optimize post timings to publish content at
         the perfect time for your audience.
       </div>
-      <div class="item">>56% faster audience growth</div>
-      <div class="item">Grow followers with non-stop content.</div>
-      <div class="item">Create and schedule content quicker.</div>
-      <div class="item">Write your content using AI.</div>
+      <div class="card-5">>56% faster audience growth</div>
+      <div class="card-6">Grow followers with non-stop content.</div>
+      <div class="card-7">Create and schedule content quicker.</div>
+      <div class="card-8">Write your content using AI.</div>
     </div>
 
     <div class="attribution">
