feat: adding images and fix font url

--- a/index.html
+++ b/index.html
@@ -28,23 +28,46 @@
   <body>
     <div class="container">
       <div class="card-1">
-        <h3>
+        <p>
           Social Media <span class="space-ajust">1</span><span>0x </span
           ><i>Faster </i> with AI
         </h3>
         <img src="./public/images/illustration-five-stars.webp" alt="" />
         <p>Over 4,000 5-star reviews</p>
       </div>
-      <div class="card-2">Manage multiple accounts and platforms.</div>
-      <div class="card-3">Maintain a consistent posting schedule.</div>
-      <div class="card-4">
-        Schedule to social media. Optimize post timings to publish content at
-        the perfect time for your audience.
+      <div class="card-2">
+        <img src="./public/images/illustration-multiple-platforms.webp" alt="">
+        <p>
+          Manage multiple accounts and platforms.</div>
+        </p>
+      <div class="card-3">
+        <p class="title">Maintain a consistent posting schedule.</p>
+        <img src="./public/images/illustration-consistent-schedule.webp" alt="">
+      
       </div>
-      <div class="card-5">>56% faster audience growth</div>
-      <div class="card-6">Grow followers with non-stop content.</div>
-      <div class="card-7">Create and schedule content quicker.</div>
-      <div class="card-8">Write your content using AI.</div>
+      <div class="card-4">
+        <p class="title">
+          Schedule to social media. 
+        </p>
+        <img src="./public/images/illustration-schedule-posts.webp" alt="">
+        Optimize post timings to publish content at
+          the perfect time for your audience.
+      </div>
+      <div class="card-6">
+        <img src="./public/images/illustration-grow-followers.webp" alt="">
+        Grow followers with non-stop content.</div>
+      <div class="card-5">
+        >56% faster audience growth
+      <img src="./public/images/illustration-audience-growth.webp" alt="">
+      </div>
+      <div class="card-7">
+        <p class="title">Create and schedule content quicker.</p>
+        <img src="./public/images/illustration-create-post.webp" alt="">
+      </div>
+      <div class="card-8">
+        <p class="title">Write your content using AI.</p>
+        <img src="./public/images/illustration-ai-content.webp" alt="">
+      </div>
     </div>
 
     <div class="attribution">
