--- a/index.html
+++ b/index.html
@@ -27,20 +27,21 @@
   </head>
   <body>
     <div class="container">
-      <div class="card-1">
-        <p>
-          Social Media <span class="space-ajust">1</span><span>0x </span
-          ><i>Faster </i> with AI
-        </h3>
-        <img src="./public/images/illustration-five-stars.webp" alt="" />
-        <p>Over 4,000 5-star reviews</p>
-      </div>
-      <div class="card-2">
-        <img src="./public/images/illustration-multiple-platforms.webp" alt="">
-        <p>
-          Manage multiple accounts and platforms.</div>
-        </p>
-      <div class="card-3">
+      <article class="card-1">
+        <h3>Social Media <span>10x </span><i>Faster </i> with AI</h3>
+        <div>
+          <img src="./public/images/illustration-five-stars.webp" alt="" />
+          <p>Over 4,000 5-star reviews</p>
+        </div>
+      </article>
+      <article class="card-2">
+        <img
+          src="./public/images/illustration-multiple-platforms.webp"
+          alt=""
+        />
+        <h3 class="title">Manage multiple accounts and platforms.</h3>
+      </article>
+      <!-- <div class="card-3">
         <p class="title">Maintain a consistent posting schedule.</p>
         <img src="./public/images/illustration-consistent-schedule.webp" alt="">
       
@@ -67,7 +68,7 @@
       <div class="card-8">
         <p class="title">Write your content using AI.</p>
         <img src="./public/images/illustration-ai-content.webp" alt="">
-      </div>
+      </div> -->
     </div>
 
     <div class="attribution">
