--- a/index.html
+++ b/index.html
@@ -41,40 +41,44 @@
         />
         <h3 class="title">Manage multiple accounts and platforms.</h3>
       </article>
-      <!-- <div class="card-3">
-        <p class="title">Maintain a consistent posting schedule.</p>
-        <img src="./public/images/illustration-consistent-schedule.webp" alt="">
-      
+      <div class="card-3">
+        <h3 class="title">Maintain a consistent posting schedule.</h3>
+        <img
+          src="./public/images/illustration-consistent-schedule.webp"
+          alt=""
+        />
       </div>
       <div class="card-4">
-        <p class="title">
-          Schedule to social media. 
+        <h3>Schedule to social media.</h3>
+        <img src="./public/images/illustration-schedule-posts.webp" alt="" />
+        <p>
+          Optimize post timings to publish content at the perfect time for your
+          audience.
         </p>
-        <img src="./public/images/illustration-schedule-posts.webp" alt="">
-        Optimize post timings to publish content at
-          the perfect time for your audience.
       </div>
       <div class="card-6">
-        <img src="./public/images/illustration-grow-followers.webp" alt="">
-        Grow followers with non-stop content.</div>
+        <img src="./public/images/illustration-grow-followers.webp" alt="" />
+        <h3>Grow followers with non-stop content.</h3>
+      </div>
       <div class="card-5">
-        >56% faster audience growth
-      <img src="./public/images/illustration-audience-growth.webp" alt="">
+        <h3>>56%</h3>
+        <p>faster audience growth</p>
+        <img src="./public/images/illustration-audience-growth.webp" alt="" />
       </div>
       <div class="card-7">
-        <p class="title">Create and schedule content quicker.</p>
-        <img src="./public/images/illustration-create-post.webp" alt="">
+        <h3 class="title">Create and schedule content <em>quicker.</em></h3>
+        <img src="./public/images/illustration-create-post.webp" alt="" />
       </div>
       <div class="card-8">
-        <p class="title">Write your content using AI.</p>
-        <img src="./public/images/illustration-ai-content.webp" alt="">
-      </div> -->
+        <h3 class="title">Write your content using AI.</h3>
+        <img src="./public/images/illustration-ai-content.webp" alt="" />
+      </div>
     </div>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">KonieK</a>.
     </div>
   </body>
 </html>
