feat: Enhance SEO performance

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
+    <meta name="description" content="Frontend Mentor | Bento grid" />
+    <meta name="keywords" content="Frontend Mentor, Bento grid, HTML, CSS" />
     <link
       rel="icon"
       type="image/png"
@@ -13,66 +13,75 @@
     />
     <link rel="stylesheet" href="./styles.css" />
     <title>Frontend Mentor | Bento grid</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <div class="container">
-      <article class="card-1">
-        <h3>Social Media <span>10x </span><i>Faster </i> with AI</h3>
-        <div>
-          <img src="./public/images/illustration-five-stars.webp" alt="" />
-          <p>Over 4,000 5-star reviews</p>
-        </div>
-      </article>
-      <article class="card-2">
-        <img
-          src="./public/images/illustration-multiple-platforms.webp"
-          alt=""
-        />
-        <h3 class="title">Manage multiple accounts and platforms.</h3>
-      </article>
-      <article class="card-3">
-        <h3 class="title">Maintain a consistent posting schedule.</h3>
-        <img
-          src="./public/images/illustration-consistent-schedule.webp"
-          alt=""
-        />
-      </article>
-      <article class="card-4">
-        <h3 class="title">Schedule to social media.</h3>
-        <img src="./public/images/illustration-schedule-posts.webp" alt="" />
-        <p>
-          Optimize post timings to publish content at the perfect time for your
-          audience.
-        </p>
-      </article>
-      <article class="card-6">
-        <img src="./public/images/illustration-grow-followers.webp" alt="" />
-        <h3>Grow followers with non-stop content.</h3>
-      </article>
-      <article class="card-5">
-        <h3>>56%</h3>
-        <p>faster audience growth</p>
-        <img src="./public/images/illustration-audience-growth.webp" alt="" />
-      </article>
-      <article class="card-7">
-        <h3 class="title">Create and schedule content <em>quicker.</em></h3>
-        <img src="./public/images/illustration-create-post.webp" alt="" />
-      </article>
-      <article class="card-8">
-        <h3 class="title">Write your content using AI.</h3>
-        <img src="./public/images/illustration-ai-content.webp" alt="" />
-      </article>
-    </div>
+    <main>
+      <div class="container">
+        <article class="card-1">
+          <h3>Social Media <span>10x </span><i>Faster </i> with AI</h3>
+          <div>
+            <img
+              src="./public/images/illustration-five-stars.webp"
+              alt="Five start reviews illustration"
+            />
+            <p>Over 4,000 5-star reviews</p>
+          </div>
+        </article>
+        <article class="card-2">
+          <img
+            src="./public/images/illustration-multiple-platforms.webp"
+            alt="Multiple platforms illustration"
+          />
+          <h3 class="title">Manage multiple accounts and platforms.</h3>
+        </article>
+        <article class="card-3">
+          <h3 class="title">Maintain a consistent posting schedule.</h3>
+          <img
+            src="./public/images/illustration-consistent-schedule.webp"
+            alt="Calendar illustration"
+          />
+        </article>
+        <article class="card-4">
+          <h3 class="title">Schedule to social media.</h3>
+          <img
+            src="./public/images/illustration-schedule-posts.webp"
+            alt="Statics ilustration"
+          />
+          <p>
+            Optimize post timings to publish content at the perfect time for
+            your audience.
+          </p>
+        </article>
+        <article class="card-6">
+          <img
+            src="./public/images/illustration-grow-followers.webp"
+            alt="Followers"
+          />
+          <h3>Grow followers with non-stop content.</h3>
+        </article>
+        <article class="card-5">
+          <h3>>56%</h3>
+          <p>faster audience growth</p>
+          <img
+            src="./public/images/illustration-audience-growth.webp"
+            alt="Audience illustration"
+          />
+        </article>
+        <article class="card-7">
+          <h3 class="title">Create and schedule content <em>quicker.</em></h3>
+          <img
+            src="./public/images/illustration-create-post.webp"
+            alt="Post ilustration"
+          />
+        </article>
+        <article class="card-8">
+          <h3 class="title">Write your content using AI.</h3>
+          <img
+            src="./public/images/illustration-ai-content.webp"
+            alt="AI content illustration"
+          />
+        </article>
+      </div>
+    </main>
   </body>
 </html>
