--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./public/images/favicon-32x32.png"
+      href="/public/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./styles.css" />
     <title>Frontend Mentor | Bento grid</title>
@@ -21,7 +21,7 @@
           <h3>Social Media <span>10x </span><i>Faster </i> with AI</h3>
           <div>
             <img
-              src="./public/images/illustration-five-stars.webp"
+              src="/public/images/illustration-five-stars.webp"
               alt="Five start reviews illustration"
             />
             <p>Over 4,000 5-star reviews</p>
@@ -29,7 +29,7 @@
         </article>
         <article class="card-2">
           <img
-            src="./public/images/illustration-multiple-platforms.webp"
+            src="/public/images/illustration-multiple-platforms.webp"
             alt="Multiple platforms illustration"
           />
           <h3 class="title">Manage multiple accounts and platforms.</h3>
@@ -37,14 +37,14 @@
         <article class="card-3">
           <h3 class="title">Maintain a consistent posting schedule.</h3>
           <img
-            src="./public/images/illustration-consistent-schedule.webp"
+            src="/public/images/illustration-consistent-schedule.webp"
             alt="Calendar illustration"
           />
         </article>
         <article class="card-4">
           <h3 class="title">Schedule to social media.</h3>
           <img
-            src="./public/images/illustration-schedule-posts.webp"
+            src="/public/images/illustration-schedule-posts.webp"
             alt="Statics ilustration"
           />
           <p>
@@ -54,7 +54,7 @@
         </article>
         <article class="card-6">
           <img
-            src="./public/images/illustration-grow-followers.webp"
+            src="/public/images/illustration-grow-followers.webp"
             alt="Followers"
           />
           <h3>Grow followers with non-stop content.</h3>
@@ -63,21 +63,21 @@
           <h3>>56%</h3>
           <p>faster audience growth</p>
           <img
-            src="./public/images/illustration-audience-growth.webp"
+            src="/public/images/illustration-audience-growth.webp"
             alt="Audience illustration"
           />
         </article>
         <article class="card-7">
           <h3 class="title">Create and schedule content <em>quicker.</em></h3>
           <img
-            src="./public/images/illustration-create-post.webp"
+            src="/public/images/illustration-create-post.webp"
             alt="Post ilustration"
           />
         </article>
         <article class="card-8">
           <h3 class="title">Write your content using AI.</h3>
           <img
-            src="./public/images/illustration-ai-content.webp"
+            src="/public/images/illustration-ai-content.webp"
             alt="AI content illustration"
           />
         </article>
